# kompakappsmrp

Desktop/Apps - SuperAdmin - Laporankeuangan v2/backend/: .dockerignore  .env.example  Dockerfile.api  Dockerfile.worker  README.md  docker-compose.yml  pyproject.toml
Desktop/Apps - SuperAdmin - Laporankeuangan v2/backend/app/: config.py  deps.py  main.py
Desktop/Apps - SuperAdmin - Laporankeuangan v2/backend/app/api_v1/: routes.py
Desktop/Apps - SuperAdmin - Laporankeuangan v2/backend/app/core/: cache.py  database.py  events.py  exceptions.py  logging.py  middleware.py  ratelimit.py  realtime.py  security.py
Desktop/Apps - SuperAdmin - Laporankeuangan v2/backend/app/modules/accounting/: api.py  models.py  repository.py  schemas.py  service.py  starter_coa.py
Desktop/Apps - SuperAdmin - Laporankeuangan v2/backend/app/modules/audit/: api.py  listener.py  models.py  schemas.py
Desktop/Apps - SuperAdmin - Laporankeuangan v2/backend/app/modules/identity/: api.py  models.py  repository.py  roles_api.py  schemas.py  service.py
Desktop/Apps - SuperAdmin - Laporankeuangan v2/backend/app/modules/inventory/: api.py  models.py  repository.py  schemas.py  service.py
Desktop/Apps - SuperAdmin - Laporankeuangan v2/backend/app/modules/notifications/: __init__.py  api.py  subscribers.py  tasks.py  templates.py
Desktop/Apps - SuperAdmin - Laporankeuangan v2/backend/app/modules/payments/: api.py  models.py  repository.py  schemas.py  service.py
Desktop/Apps - SuperAdmin - Laporankeuangan v2/backend/app/modules/periods/: api.py  models.py  schemas.py  service.py
Desktop/Apps - SuperAdmin - Laporankeuangan v2/backend/app/scripts/: import_legacy.py  manage_partitions.py  seed.py
Desktop/Apps - SuperAdmin - Laporankeuangan v2/backend/app/worker/: celery_app.py
Desktop/Apps - SuperAdmin - Laporankeuangan v2/backend/migrations/: env.py
Desktop/Apps - SuperAdmin - Laporankeuangan v2/backend/migrations/versions/: 0001_add_cf_section_to_accounts.py  0001_identity_init.py  0002_accounting_init.py  0003_sales_purchase_init.py  0004_partition_journals.py  0005_enable_rls.py  0006_account_is_cash.py  0007_payments_init.py  0008_refund_directions.py  0009_audit_logs.py  0010_period_close.py  0011_inventory_init.py  0012_inventory_invoice_lines.py  0013_costing_method.py  0014_stock_transfers.py  0015_pos_init.py
Desktop/Apps - SuperAdmin - Laporankeuangan v2/backend/tests/: conftest.py  test_accounting.py  test_audit.py  test_bank_reconciliation.py  test_cashflow.py  test_cost_layers_ledger.py  test_costing_methods.py  test_identity.py  test_import_legacy.py  test_inventory.py  test_inventory_invoicing.py  test_inventory_reports.py  test_payments.py  test_periods.py  test_pos.py  test_ppn.py  test_ratelimit.py  test_reports.py  test_rls.py  test_roles.py  test_sales_purchase.py  test_statements.py  test_stock_card.py  test_stock_transfers.py
(+73 files in other folders)
