[project]
name = "kompak-accounting-backend"
version = "0.1.0"
description = "Kompak Accounting SaaS Backend — FastAPI + PostgreSQL"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "redis>=5.2.0",
    "celery>=5.4.0",
    "python-multipart>=0.0.20",
    "email-validator>=2.2.0",
    "structlog>=24.4.0",
    "httpx>=0.28.0",
    "openpyxl>=3.1.0",
    "reportlab>=4.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "ASYNC"]
ignore = [
    # FastAPI / Pydantic / SQLAlchemy idioms — function calls in defaults
    # are the standard pattern (Depends, Field, mapped_column, Query…).
    "B008",
    # `AppException` is a deliberate base class, not an "Error" type.
    "N818",
    # SQLAlchemy ORM models commonly use `id`, `type`, `status`, etc.
    "A003",
]
# Single-letter loop vars `l` / `I` are reasonable in tight contexts
# (line items, lambdas). Keep E741 enabled but allow per-line `noqa`.

[tool.ruff.lint.extend-per-file-ignores]
# Tests are allowed to import for side-effects + use long URLs/payloads.
"tests/**" = ["E501"]
# Migrations are auto-generated style; keep them readable but lax.
"migrations/**" = ["E501", "I001"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
